fixed some spacing issuesin cover letter

--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,8 +1,11 @@
 .hero-area {
     width: 100%;
-    height: 300px;
+    height: calc(100vh - 3rem);
     display: flex;
-    justify-content: center;
+    gap: 2rem;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
 }
 
 .profile-Container {
