--- a/sass/components/_project.scss
+++ b/sass/components/_project.scss
@@ -64,6 +64,9 @@
   height: fit-content;
   display: flex;
   justify-content: flex-end;
+  div a {
+    color: #ffffff;
+  }
 }
 .story-wrapper:nth-child(2){
   width: 100%;
